# TeXisStudio

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  TeXisStudio.code-workspace  TeXisStudio_Master_Specification_v1.0.md  build  build.ps1  check  check-all  check-all.ps1  check.ps1  deny.toml  run  run.ps1
.claude/: launch.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml  security.yml
community/: README.md
docs/: CLAUDE-DOCUMENTATION-HANDOFF.md  MASTER-DOCUMENT-MODULE-HARDENING-PLAN.md  documentation-professionalization-plan.md
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
schemas/: block.v0.1.0.json  element.v0.1.0.json  manifest.v0.1.0.json  profile.v0.1.0.json  profile.v1.0.0.json  project.v0.1.0.json
scripts/: bootstrap-windows.ps1  bootstrap.sh  build-linux.sh  build-mac.sh  build-windows.ps1  check-i18n.mjs  check-versions.mjs  content-lint.mjs  pseudo-localize.mjs  setup-debian.sh  texis.mjs
texis-app/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
texis-app/src-tauri/: Cargo.toml  tauri.conf.json
texis-app/src-tauri/capabilities/: default.json
texis-app/src-tauri/icons/: icon.icns
texis-app/src-tauri/src/: error_format.rs  lib.rs  main.rs
texis-app/src-tauri/src/ai/: action.rs  context.rs  conversation.rs  engine.rs  mod.rs  request.rs  response.rs  safety.rs
texis-app/src-tauri/src/ai/providers/: claude_provider.rs  gemini_provider.rs  mod.rs  openai_provider.rs
texis-app/src-tauri/src/commands/: ai.rs  bibliography_unified.rs  build.rs  compiler.rs  datacite.rs  document_core.rs  doi.rs  export_platform.rs  figure_plugin.rs  glossary.rs  import_project.rs  mod.rs  openalex.rs  package.rs  project.rs  recovery.rs  remote.rs  semantic_scholar.rs  snippet_preview.rs  system.rs  template.rs  workspace.rs  zotero.rs
texis-certification/: Cargo.toml
texis-certification/src/: compile_gate.rs  lib.rs
texis-cli/: Cargo.toml
texis-cli/src/: main.rs
texis-cli/src/commands/: build_plan.rs  certify.rs  compile.rs  create.rs  export.rs  import.rs  import_ir.rs  mod.rs  validate.rs
texis-core/: Cargo.toml
texis-core/src/: commands.rs  dependency_graph.rs  error.rs  events.rs  lib.rs  quality.rs
texis-core/src/asset/: registry.rs
texis-core/src/bibliography/: backend_policy.rs  exporters.rs  formatter.rs  manager.rs  merger.rs  mod.rs  model.rs  normalization.rs  parser.rs  registry.rs  validator.rs
texis-core/src/build_engine/: engine.rs  mod.rs  plan.rs  preflight.rs  result.rs  toolchain.rs
texis-core/src/compiler/: detector.rs  error_translator.rs  latexmk.rs  mod.rs  tectonic.rs
texis-core/src/diagnostics/: engine.rs  mod.rs  model.rs  registry.rs
texis-core/src/document/: engine.rs  mod.rs
texis-core/src/element/: loader.rs  mod.rs  model.rs  registry.rs
texis-core/src/exporter/: delivery.rs  mod.rs  platform.rs
texis-core/src/generator/: frontmatter.rs  glossary_tex.rs  labels.rs  main_tex.rs  mod.rs  project.rs  sections.rs
texis-core/src/glossary/: mod.rs  model.rs  parser.rs
texis-core/src/importer/: consolidator.rs  folder_import.rs  mod.rs
texis-core/src/package/: detector.rs  engine.rs  mod.rs  model.rs  registry.rs
texis-core/src/plugin/: model.rs  registry.rs
texis-core/src/postflight/: mod.rs  model.rs  pdf_checker.rs  visual.rs
texis-core/src/profile/: loader.rs  lock.rs  mod.rs  model.rs  policy.rs  registry.rs
texis-core/src/project/: file_state.rs  loader.rs  mod.rs  model.rs  saver.rs
texis-core/src/reference/: registry.rs
texis-core/src/schema/: migrator.rs  mod.rs  versions.rs
texis-core/src/security/: credential_store.rs  mod.rs
texis-core/src/system/: doctor.rs  mod.rs
texis-core/src/template/: engine.rs  escape.rs  mod.rs
texis-core/src/template_engine/: builtin.rs  engine.rs  mod.rs  model.rs
texis-core/src/texis_project/: migrations.rs  mod.rs  model.rs  persistence.rs
texis-core/src/validator/: academic.rs  bibliography.rs  crossref.rs  mod.rs  report.rs  structural.rs  technical.rs
texis-core/src/visual/: bio_pathway.rs  chem.rs  circuit.rs  feynman.rs  flow.rs  mod.rs  music.rs  timeline.rs  venn.rs
texis-core/tests/: broken.rs  e2e.rs  profiles.rs  qa_delivery_harness.rs  snapshots.rs  stress_thesis.rs
texis-core/tests/fixtures/: mod.rs
texis-core/tests/snapshots/: snapshots__snapshot_generic_thesis_introduccion.snap  snapshots__snapshot_generic_thesis_main_tex.snap
texis-document-application/: Cargo.toml
texis-document-application/src/: assemble_document.rs  import_project.rs  lib.rs  ports.rs
texis-document-contracts/: Cargo.toml
texis-document-contracts/src/: assets.rs  capabilities.rs  diagnostics.rs  ids.rs  lib.rs  locale.rs  manifest.rs  measures.rs  profile.rs  provenance.rs  text.rs  version.rs
texis-document-domain/: Cargo.toml
texis-document-domain/src/: backend.rs  bib_styles.rs  capability_registry.rs  graph.rs  labels.rs  lib.rs  phase.rs  plan.rs  plan_builder.rs  policy.rs  precedence.rs  resolver.rs
texis-document-domain/src/ir/: body_node.rs  meta.rs  mod.rs  modules.rs  resources.rs
texis-document-domain/src/validation/: appendices.rs  bibliography.rs  body.rs  cover.rs  indexes.rs  mod.rs  preliminaries.rs
texis-document-domain/tests/: architecture.rs
texis-document-infra/: Cargo.toml
texis-document-infra/src/: bibtex_parser.rs  fixtures.rs  hasher.rs  json_serializer.rs  latex_backend.rs  legacy_importer.rs  lib.rs  profile_migrator.rs
texis-document-infra/tests/: appendices.rs  bibliography.rs  body.rs  capabilities.rs  cover.rs  graph.rs  import_ir.rs  legacy_input.rs  migration.rs  pipeline.rs  policy.rs  preliminaries_indexes.rs
texis-platform/: Cargo.toml
texis-platform/src/: atomic.rs  ecosystem.rs  integrity.rs  journal.rs  lib.rs  lifecycle.rs  lock.rs  observability.rs  paths.rs  recovery.rs  review.rs  safety.rs  serde_u128.rs  snapshot.rs
(+241 files in other folders)
