[workspace]
members = [
    "texis-core",
    "texis-cli",
    "texis-app/src-tauri",
    # Núcleo documental nuevo (Plan Maestro A→J). Convive con texis-core
    # (congelado) hasta la Etapa I. Grafo de deps: contracts <- domain <-
    # application <- infra/adapters.
    "texis-document-contracts",
    "texis-document-domain",
    "texis-document-application",
    "texis-document-infra",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_yaml   = "0.9"
serde_json   = "1"
minijinja    = { version = "2", features = ["loader"] }
jsonschema   = "0.18"
schemars     = { version = "0.8", features = ["preserve_order"] }
thiserror    = "1"
anyhow       = "1"
walkdir      = "2"
zip          = "2"
regex        = "1"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "serde"] }
lazy_static  = "1"
url          = "2"
clap         = { version = "4", features = ["derive"] }

insta        = { version = "1", features = ["yaml"] }
tempfile     = "3"

# Crates internos del núcleo documental nuevo (rutas relativas).
texis-document-contracts   = { path = "texis-document-contracts" }
texis-document-domain      = { path = "texis-document-domain" }
texis-document-application = { path = "texis-document-application" }
