[package]
name = "texis-cli"
version = "1.1.0"
edition.workspace = true
description = "CLI for TeXisStudio"

[[bin]]
name = "texis"
path = "src/main.rs"

[dependencies]
texis-core  = { path = "../texis-core" }
clap        = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
