[package]
name = "texis-cli"
version = "1.2.0"
edition.workspace = true
description = "CLI for TeXisStudio"

[[bin]]
name = "texis"
path = "src/main.rs"

[dependencies]
texis-core  = { path = "../texis-core" }
texis-document-application = { workspace = true }
texis-document-infra      = { path = "../texis-document-infra" }
texis-certification       = { path = "../texis-certification" }
clap        = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
serde_json  = { workspace = true }
