[package]
name = "texis-core"
version = "0.1.0"
edition.workspace = true
description = "Core library for TeXisStudio — profile engine, LaTeX generator, compiler backend"

[dependencies]
serde       = { workspace = true }
serde_yaml  = { workspace = true }
serde_json  = { workspace = true }
minijinja   = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
walkdir     = { workspace = true }
regex       = { workspace = true }
chrono      = { workspace = true }
jsonschema  = { workspace = true }

[dev-dependencies]
insta       = { workspace = true }
tempfile    = { workspace = true }
