[package]
name = "texis-core"
version = "1.2.0"
edition.workspace = true
description = "Core library for TeXisStudio — profile engine, LaTeX generator, compiler backend"

[dependencies]
serde       = { workspace = true }
serde_yaml  = { workspace = true }
serde_json  = { workspace = true }
minijinja   = { workspace = true }
thiserror   = { workspace = true }
walkdir     = { workspace = true }
regex       = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
lazy_static = { workspace = true }
url         = { workspace = true }
jsonschema  = { workspace = true }
schemars    = { workspace = true }
sha2        = "0.11"
zip         = { workspace = true }

[dev-dependencies]
insta       = { workspace = true }
tempfile    = { workspace = true }
