[package]
name = "texis-document-contracts"
version = "0.1.0"
edition.workspace = true
description = "Shared Kernel y contratos versionados del núcleo documental de TeXisStudio (sin dependencias internas)."

# REGLA DE ARQUITECTURA (§16.1, §16.2 del Plan Maestro):
# Este crate es la base del grafo de dependencias. NO debe depender de ningún
# otro crate del workspace. Solo conceptos universales: IDs, diagnósticos,
# idioma, provenance, assets, medidas, capacidades, versiones de contrato.
[dependencies]
serde   = { workspace = true }
