[package]
name = "texis-document-domain"
version = "0.1.0"
edition.workspace = true
description = "Dominio documental de TeXisStudio: DocumentIR, fases canónicas, resolución y plan inmutable."

# REGLA DE ARQUITECTURA (§16.1): el dominio NO depende de React, Tauri,
# filesystem, YAML, GitHub ni procesos de compilación. Su ÚNICA dependencia
# interna es `texis-document-contracts` (el Shared Kernel).
# Prohibido añadir aquí: serde_yaml, minijinja, walkdir, zip, tauri, std::fs
# (uso real), reqwest, etc. El test `tests/architecture.rs` lo verifica.
[dependencies]
texis-document-contracts = { workspace = true }
serde = { workspace = true }
