[package]
name = "texis-app"
version = "1.0.0"
edition.workspace = true

[lib]
name = "texis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
serde       = { workspace = true }
serde_json  = { workspace = true }
walkdir     = { workspace = true }
texis-core  = { path = "../../texis-core" }
tauri-plugin-dialog = "2"
dirs        = "5"
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
zip          = "2"
chrono       = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
