[package]
name = "texis-app"
version = "1.0.0"
edition.workspace = true

[lib]
name = "texis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["protocol-asset"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
walkdir     = { workspace = true }
texis-core  = { path = "../../texis-core" }
tauri-plugin-dialog  = "2"
tauri-plugin-log     = "2"
log                  = "0.4"
tauri-plugin-updater = "2"
dirs        = "5"
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
zip          = "2"
chrono       = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tempfile     = { workspace = true }
tokio        = { version = "1", features = ["rt", "sync", "time", "macros"] }
thiserror    = { workspace = true }
sha2         = "0.10"
urlencoding  = "2"
uuid         = { workspace = true }
